arkts_static_test/03_Types/ets_cases/3.21.6_Record_Utility_Type/compile-pass/TYP_03_21_06_002_PASS_RECORD_STRING_KEY.ets
/**
 * @id TYP_03_21_06_002_PASS_RECORD_STRING_KEY
 * @expect compile-pass
 * @section 3.21.6
 * @design Record<string, Object> 合法
 * @note 正向用例：string key
 */
type R2_2 = Record<string, Object>